--- a/app/views/about.html
+++ b/app/views/about.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/main.css" title="CSS" type="text/css" />
   </head>
   <body>
-    <h1>Welcome!</h1>
-    <a href="/about">About Me</a>
+    <h1>About Me!</h1>
+    <p>Here's some stuff to know.</p>
   </body>
 </html>
